# 2025-final-individual-alexpervushin

solution/: Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
solution/e2e/: 01_create_clients.tavern.yml  02_update_clients.tavern.yml  03_create_advertisers.tavern.yml  04_update_advertisers.tavern.yml  05_ml_score_advertisers.tavern.yml  06_create_campaigns.tavern.yml  07_time_advance.tavern.yml  08_web_endpoints.tavern.yml  09_stats_endpoints.tavern.yml  10_ads_endpoints.tavern.yml  11_ai_generation.tavern.yml  12_export_and_time.tavern.yml  pyproject.toml
solution/frontend/: router.py
solution/frontend/static/: styles.css
solution/frontend/templates/: advertisers_campaign.html  advertisers_create.html  advertisers_dashboard.html  advertisers_index.html  advertisers_login.html  advertisers_ml_score.html  advertisers_moderation.html  advertisers_profile.html  advertisers_register.html  clients_dashboard.html  clients_index.html  clients_login.html  clients_register.html
solution/grafana/dashboards/: analytics.json
solution/prometheus/: prometheus.yml
solution/src/common/: depends.py  enums.py  types.py
solution/src/core/: db.py  models.py  redis.py  settings.py  uow.py
solution/src/main/: telegram.py  web.py
solution/tests/ads/: test_ads_use_cases.py
solution/tests/advertisers/: conftest.py  test_advertisers_repositories.py  test_advertisers_use_cases.py
solution/tests/ai/: test_ai_use_cases.py
solution/tests/campaigns/: test_campaigns_use_cases.py
solution/tests/time/: test_time_use_cases.py
(+133 files in other folders)
